# characteristic3dposes

./: .gitignore  .gitmodules  LICENSE.txt  README.md  pyproject.toml  train_grab.sh  train_h36m.sh
characteristic3dposes/: config.yaml  evaluate.py  refine.py  sample.py  train.py
characteristic3dposes/data/grab/: __init__.py  constants.py  dataset.py  index.txt
characteristic3dposes/data/h36m/: __init__.py  constants.py  dataset.py  index.txt
characteristic3dposes/model/: attention.py  main.py
characteristic3dposes/ops/: loss.py  misc.py  render.py  sampling.py
data_generation/grab/: charposes.csv  generate_npz.py
data_generation/grab/input/: extract.sh
data_generation/h36m/: charposes.csv  generate_npz.py
data_generation/h36m/input/: extract.sh
